--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -4,3 +4,4 @@
 @import './components/Header';
 @import './components/Footer';
 @import './pages/home/HomeFirstBlock';
+@import './pages/home/HomeSecondBlock';
